modified ansible cfg file to indicate new logging location in /var/log, so github is not holding an ever-growing log file. Deleted the log file now that it will be used elsewhere (already copied over). Also created a new playbook that updates the apt package repo index.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 inventory = /home/brian/ansible/inventory
 private_key_file = ~/.ssh/ansible
-log_path = ./ansible.log
+log_path = /var/log/ansible/ansible.log
