updated inventory file + ansible cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-inventory = /home/brian/ansible/inventory
-private_key_file = ~/.ssh/ansible
+inventory = /home/brian/ansible/inventory.yml
+#private_key_file = ~/.ssh/ansible
 log_path = /var/log/ansible/ansible.log
